--- a/client/assets/color.scss
+++ b/client/assets/color.scss
@@ -1,5 +1,7 @@
 $text_color: #2e4053;
 $green_color: #85c987;
+$green_color_l: #a6ffa9d8;
 $blue_color: #428bca;
 $red_color: #d9534f;
+$red_color_l: #ff9c99de;
 $grey_color: #929292;
