--- a/templates/email/order_admin.html
+++ b/templates/email/order_admin.html
@@ -229,10 +229,7 @@
                 padding: 7px;
               "
             >
-              <a
-                href="http://orten.in.ua" {% comment "" %} !FIX! {% endcomment %}
-                >{{ item.name }}</a
-              >
+              <span>{{ item.name }}</span>
             </td>
             <td
               style="
